Invalid dir attributes should resolve to ltr https://bugs.webkit.org/show_bug.cgi?id=125830

Source/WebCore:

Reviewed by Darin Adler.

Merge https://chromium.googlesource.com/chromium/blink/+/2d592d1c998bec9438e421e1ce1ee6caba05a884

The dir attribute should resolve to direction: ltr by default when the attribute value is
"not in a defined state": http://www.w3.org/TR/2013/WD-html51-20130528/dom.html#the-directionality

Test: fast/dom/HTMLElement/set-and-clear-dir-attribute.html

* html/HTMLElement.cpp:
(WebCore::isLTROrRTLIgnoringCase): Extracted from HTMLElement::directionality.
(WebCore::HTMLElement::collectStyleForPresentationAttribute):
(WebCore::HTMLElement::directionality):

LayoutTests:

Reviewed by Darin Adler.

* fast/dom/HTMLElement/set-and-clear-dir-attribute-expected.txt: Added.
* fast/dom/HTMLElement/set-and-clear-dir-attribute.html: Added.


Canonical link: https://commits.webkit.org/143875@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160719 268f45cc-cd09-0410-ab3c-d52691b4dbfc